--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
   "scripts": {
     "dev": "nodemon",
     "start": "probot run ./index.js",
+    "now-start": "PRIVATE_KEY=$(echo $PRIVATE_KEY_BASE64 | base64 -d) npm start",
     "lint": "standard --fix",
-    "test": "jest && standard",
+    "test": "jest --coverage",
     "test:watch": "jest --watch --notify --notifyMode=change --coverage"
   },
   "dependencies": {
@@ -41,6 +42,9 @@
   },
   "nodemonConfig": {
     "exec": "npm start",
-    "watch": [".env", "."]
+    "watch": [
+      ".env",
+      "."
+    ]
   }
 }
