--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "Auto-Reminder",
   "version": "1.0.0",
   "description": "Auto creates a comment with a deadline on a pull request.",
-  "author": "Irvin Jimenez-Solis &lt;ijimenez.solis18@gmail.com&gt; (https://github.com/Irvin-Solis)",
+  "author": "Irvin Jimenez-Solis &lt;ijimenez.solis18@gmail.com&gt; (https://github.cerner.com/IJ057650)",
   "license": "ISC",
   "repository": "https://github.com/Irvin-Solis/Auto-remind.git",
   "homepage": "https://github.com/Irvin-Solis/Auto-remind",
@@ -15,8 +15,9 @@
   "scripts": {
     "dev": "nodemon",
     "start": "probot run ./index.js",
+    "now-start": "PRIVATE_KEY=$(echo $PRIVATE_KEY_BASE64 | base64 -d) npm start",
     "lint": "standard --fix",
-    "test": "jest && standard",
+    "test": "jest --coverage",
     "test:watch": "jest --watch --notify --notifyMode=change --coverage"
   },
   "dependencies": {
@@ -41,6 +42,9 @@
   },
   "nodemonConfig": {
     "exec": "npm start",
-    "watch": [".env", "."]
+    "watch": [
+      ".env",
+      "."
+    ]
   }
 }
